logs/hey.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Hey-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/src'...
Compiling './lib/python3.5/site-packages/src/compression.py'...
***   File "./lib/python3.5/site-packages/src/compression.py", line 38
    print "It doesn't look like the file type for {0} is supported yet".format(x)
                                                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/src/directions.py'...
***   File "./lib/python3.5/site-packages/src/directions.py", line 10
    print "I don't understand"
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/src/find.py'...
***   File "./lib/python3.5/site-packages/src/find.py", line 22
    print "I don't understand"
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/src/google.py'...
***   File "./lib/python3.5/site-packages/src/google.py", line 7
    print "There I opened a new browser window"
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/src/push.py'...
***   File "./lib/python3.5/site-packages/src/push.py", line 11
    print "To where should I push it?"
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/src/rename.py'...
***   File "./lib/python3.5/site-packages/src/rename.py", line 24
    print "The file {0} has been copied to {1}".format(string[0], string[1])
                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/src/tell.py'...
***   File "./lib/python3.5/site-packages/src/tell.py", line 17
    print data['value']['joke']
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/src/update.py'...
***   File "./lib/python3.5/site-packages/src/update.py", line 13
    print "That OS or distribution is not supported"
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/src/what.py'...
***   File "./lib/python3.5/site-packages/src/what.py", line 29
    print "Your name is: {}".format(platform.uname()[1])
                           ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
